--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,4 +26,4 @@ jobs:
           cache: 'npm'
           node-version: '16'
       - name: Install dependencies
-        run: npm ci
+        run: npm i
